styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap&family=Roboto+Slab:wght@300;400;500;700&display=swap");

* {
    box-sizing: border-box;
}

body {
    font-family: "Montserrat", sans-serif;
    /* background-image: linear-gradient(
        to bottom right,
        rgba(58, 80, 22, 0.573),
        rgba(23, 47, 3, 0.891)
    ); */
    background-color: #202c059f;

    /* we need height for align items to work*/
    overflow: hidden;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0;
    overflow: hidden;
    height: 100vh;
    backdrop-filter: blur(10px);
}

h1 {
    font-family: "roboto slab", serif;
    color: #fbff00;
    font-size: 2.5rem;
}

.container {
    display: flex;
    width: 90vw;
    height: 80vh;
     background-image: linear-gradient(
        to bottom left ,#718030,#3e4811, #17240a
        
    );
}

.panel {
    background-size: cover 1000px;
    background-position: center;
    background-repeat: no-repeat;

    height: 60vh;
    border-radius: 50px;
    flex: 0.5;
    margin: 10px;
    position: relative;
    transition: flex 0.8s ease-in-out;
    cursor: pointer;
    
}

.panel.active {
    flex: 7;
    box-shadow: 5px 5px 15px 5px #464629;
}

.panel h3 {
    color: #fbff00;
    background-color: rgba(30, 30, 30, 0.403);
    border-radius: 10px;
    font-size: 1.8rem;
    position: absolute;
    bottom: 20px;
    left: 20px;
    margin: 0;
    opacity: 0;
    text-align: center;
    padding: 0.3rem 0.5rem;
}

.panel.active h3 {
    opacity: 1;
    transition: opacity 1s;
    transition-delay: 0.5s;
}

.panel p {
    color: rgb(255, 255, 255);
    position: absolute;
    left: 20px;
    top: 97%;
    font-size: 1.6rem;
    opacity: 0;
}

.panel.active p {
    opacity: 100;
    transition: opacity 3s;
    transition-delay: 0.5s;
}

.navigate-box {
    display: none;
}

.panel h2 {
    margin-left: 20px;
    font: 1rem;
    color: rgb(255, 255, 255);
}

/* MOBILE STYLES */
@media (max-width: 568px) {
    h1 {
        margin-top: 0;
        font-size: 1rem;
        text-align: center;
    }

    .container {
        width: 90vw;
        height: 80vh;
        box-shadow: 0 0 15px#4141268f;
        margin-bottom: auto;
        border-radius: 8px;
    }

    /* Panel styles*/
    .panel {
        display: none;
        border-radius: 8px;
        height: 30vh;
        background-size: cover;
        background-position: bottom;


        &.active {
            display: block;
            opacity: 1;
            box-shadow: none;
            border-radius: 8px;
            /* box-shadow: 0 0 5px #000000; */


            & p {
                font-size: 1rem;
                /* color: red; */
                left: 10px;
                opacity: 100;
            }
        }

        & h3 {
            text-align: center;
            border-radius: 5px;
            padding: 0 0 0 0;
            left: 10px;
            bottom: 0;
            opacity: 0;
            font-size: 1rem;
        }
    } /* End of panel styles*/

    .hidden {
        display: none;
    }

    .navigate-box {
        display: flex;
        flex-direction: row;
        justify-content: center;
        gap: 15px;
        position: absolute;
        bottom: 15%;
    }

    .navigate-btn {
        width: 100px;
        height: 50px;
        font-weight: 700px;
        box-shadow: 1px 1px 10px 2px #464629;
        /* position: absolute; */
    }
}

.navigate-btn:active {
    background-color: rgba(183, 186, 181, 0.572);
    border: none;
}

